# newsletters_via_django

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
newsletters/: admin.py  forms.py  models.py  services.py  urls.py  views.py
newsletters/migrations/: 0001_initial.py  0002_alter_client_comment.py  0002_alter_trial_options_trial_client.py  0003_alter_newsletter_options.py  0003_client_owner_newsletter_owner.py  0004_alter_newsletter_options.py  0004_alter_newsletter_time.py  0005_alter_trial_status.py
newsletters/templates/newsletters/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html  trial_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_phone.py
users/templates/users/: email_verification.html  login.html  register.html  user_form.html  user_list.html
