[tool.poetry]
name = "django-basics"
version = "0.1.0"
description = "Django Basics Project to represent the knowledge of the developer"
authors = ["Mark Pochivalov <pochivalov.mark@gmail.com>"]
readme = "README.md"
packages = [{include = "django_basics"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
django = "^4.2.3"
django-crontab = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
